# Dynamical-Billiards

./: .gitignore  CMakeLists.txt  README.md  conandata.yml
src/: LightBeam.py  main.cpp  main.py  run_cpp.py
src/data/: classical_data.csv  data.csv
src/logic/: Billiard.cpp  Billiard.h  CMakeLists.txt  Schrodinger.cpp  Schrodinger.h  Schrodinger.py  SinaiBilliard.cpp  SinaiBilliard.h  Utils.h  Vec2.h  conandata.yml  main.cpp
src/miscellaneous/: Utils.h
src/writer/: writer.cpp  writer.h
